# rexgraph

./: .gitignore  CMakeLists.txt  README.md  environment-minimal.yml  environment.yml  file::memory:  gitignore  meson.build  pyproject.toml  setup_hpc.sh
rexgraph/: README.md  __init__.py  analysis.py  graph.py  meson.build  types.py
rexgraph/core/: README.md  __init__.py  _boundary.pyx  _channels.pyx  _character.pyx  _common.pxd  _common.pyx  _cross_complex.pyx  _cycles.pyx  _dirac.pyx  _faces.pyx  _fiber.pyx  _field.pyx  _frustration.pyx  _hodge.pyx  _hypermanifold.pyx  _interfacing.pyx  _joins.pyx  _laplacians.pyx  _linalg.pxd  _linalg.pyx  _overlap.pyx  _persistence.pyx  _query.pyx  _quotient.pyx  _rcfe.pyx  _relational.pyx  _rex.pyx  _signal.pyx  _sparse.pyx  _spectral.pyx  _standard.pyx  _state.pyx  _temporal.pyx  _transition.pyx  _void.pyx  _wave.pyx  meson.build
rexgraph/core/.ipynb_checkpoints/: README-checkpoint.md
rexgraph/io/: README.md  README.me  __init__.py  _compat.py  _serialization.py  arrow_bridge.py  bundle.py  csv_loader.py  hdf5_format.py  json_loader.py  meson.build  parquet_bridge.py  sql_bridge.py  zarr_format.py
rexgraph/viz/: __init__.py  dashboard.py  meson.build
rexgraph/viz/templates/: rex_dashboard_template.jsx
tests/: conftest.py  test_analysis.py  test_arrow_bridge.py  test_boundary.py  test_bundle.py  test_channels_cross_complex.py  test_character.py  test_character_channels.py  test_common.py  test_compat.py  test_csv_loader.py  test_cycles.py  test_dirac.py  test_e2e.py  test_face_selection.py  test_faces.py  test_fiber.py  test_field.py  test_frustration.py  test_graph.py  test_graph_integration.py  test_hdf5_format.py  test_hodge.py  test_hypermanifold.py  test_integration.py  test_interfacing.py  test_io.py  test_joins.py  test_json_loader.py  test_laplacians.py  test_linalg.py  test_linalg_module.py  test_linkage_filtration.py  test_overlap.py  test_parquet_bridge.py  test_persistence.py  test_query.py  test_quotient.py  test_rcf_core.py  test_rcf_math.py  (+17 more)
