# rexgraph/io - pure Python serialization and storage
py.install_sources(
    [
        '__init__.py',
        '_compat.py',
        '_serialization.py',
        'arrow_bridge.py',
        'bundle.py',
        'csv_loader.py',
        'hdf5_format.py',
        'parquet_bridge.py',
        'sql_bridge.py',
        'zarr_format.py',
    ],
    subdir: 'rexgraph/io',
)
